samples/_failures_safe/1761426265_ccd870_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cbca1d73.c: In function ‘main’:
./samples/SAFE/__tmp_cbca1d73.c:130:59: error: expected ‘)’ at end of input
  130 |     if (!read_size_t("Enter columns for matrix A: ", &cols
      |                     ~                                     ^
      |                                                           )
./samples/SAFE/__tmp_cbca1d73.c:130:5: error: expected declaration or statement at end of input
  130 |     if (!read_size_t("Enter columns for matrix A: ", &cols
      |     ^~
